// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`implementation AND YET here is another 1`] = `
Object {
  "$id": "1",
  "currentDateTime": "2021-03-25T16:46-04:00",
  "currentFileTime": 132611644172887300,
  "dayOfTheWeek": "Thursday",
  "isDayLightSavingsTime": true,
  "ordinalDate": "2021-84",
  "serviceResponse": null,
  "timeZoneName": "Eastern Standard Time",
  "utcOffset": "-04:00:00",
}
`;

exports[`implementation AND YET here is another 2`] = `
Object {
  "$id": "1",
  "currentDateTime": "2021-03-25T16:46-04:00",
  "currentFileTime": 132611644177899040,
  "dayOfTheWeek": "Thursday",
  "isDayLightSavingsTime": true,
  "ordinalDate": "2021-84",
  "serviceResponse": null,
  "timeZoneName": "Eastern Standard Time",
  "utcOffset": "-04:00:00",
}
`;

exports[`implementation AND here is another 1`] = `
Object {
  "completed": false,
  "id": 1,
  "title": "delectus aut autem",
  "userId": 1,
}
`;

exports[`implementation Hi here is another 1`] = `
Object {
  "completed": false,
  "id": 1,
  "title": "delectus aut autem",
  "userId": 1,
}
`;

exports[`implementation should not allow external requests in CI 1`] = `
Object {
  "$id": "1",
  "currentDateTime": "2021-03-25T20:46Z",
  "currentFileTime": 132611788167418560,
  "dayOfTheWeek": "Thursday",
  "isDayLightSavingsTime": false,
  "ordinalDate": "2021-84",
  "serviceResponse": null,
  "timeZoneName": "UTC",
  "utcOffset": "00:00:00",
}
`;
